third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/overwrite-bool-with-array.stderr
TOML parse error at line 2, column 1
  |
2 | [[a]]
  | ^
invalid table header
duplicate key `a` in document root
